# latest.cat

./: .env.sample  .fastapicloudignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  LICENSE  Makefile  README.md  app.py  db.sqlite  fetch_versions.py  flake.nix  fly.toml  inertia.py  main.py  models.py  package.json  plan.md  pnpm-lock.yaml  pyproject.toml  setup_db.py  software.yml  vite.config.ts
.fastapicloud/: README.md  cloud.json
.github/: FUNDING.yml
.github/actions/fetch-versions/: run.py  software.yml
.github/workflows/: deploy.yaml  deploy.yml  fetch-versions.yaml  preview-versions.yaml
api/: context.py  schema.py  types.py
backend/: Dockerfile  Makefile  config.py  db.sqlite  main.py  notion.py  pyproject.toml  schema.prisma  setup_db.py  software.yml  utils.py
backend/api/: schema.py  types.py
backend/cli/: __init__.py  __main__.py  _fetchers.py  _software.py  app.py  fetch_versions.py
butter/: __init__.py  components.py  render.py
caddy/: .gitignore  Caddyfile  Caddyfile.dev  Makefile  caddy.json  curl_response.go  go.mod
cli/: _config.py  _fetchers.py  _software.py  app.py
components/: cat.py  layout.py  logo.py  title.py
data/: config.py  notion.py  utils.py
frontend/: app.tsx  astro.config.mjs  env.sample  index.css  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.mjs  tsconfig.json
frontend/.storybook/: main.js
frontend/Pages/: Home.tsx  NotFound.tsx  Software.tsx
frontend/components/: AboutBox.tsx  Box.tsx  Command.tsx  Footer.tsx  Header.tsx  Hero.tsx  LatestReleasesMarquee.tsx  LatestVersion.tsx  Marquee.tsx  SearchInput.tsx  about-box.tsx  box.stories.tsx  box.tsx  command.stories.tsx  command.tsx  footer.stories.tsx  footer.tsx  header.stories.tsx  header.tsx  hero.stories.tsx  hero.tsx  latest-version.stories.tsx  latest-version.tsx  logo.stories.tsx  logo.tsx  marquee.stories.tsx  marquee.tsx  meta.tsx  search-input.stories.tsx  search-input.tsx  software-not-found.stories.tsx  software-not-found.tsx  toggle.stories.tsx  toggle.tsx  useful-links.stories.tsx  useful-links.tsx
frontend/lib/: api.ts
frontend/pages/: 404.tsx  [...software].tsx  [slug].tsx  _app.tsx  _document.tsx  index.tsx
frontend/public/: site.webmanifest
frontend/src/: Command.astro
frontend/src/components/: AboutBox.astro  Box.astro  Footer.astro  Header.astro  Hero.astro  LatestReleasesMarquee.astro  LatestVersion.astro  Logo.astro  Marquee.astro  SearchInput.astro  SoftwareNotFound.astro  Toggle.astro
frontend/src/components/icons/: 1.astro  2.astro  3.astro  4.astro  5.astro  6.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: 404.astro  [software].astro  index.astro
frontend/styles/: globals.css
frontend/utils/: ogMeta.ts
pages/: four_oh_four.py  home.py  search.py  version.py
services/: health.py  og_image.py  og_meta.py  software.py
templates/: app.html
tests/: test_health.py  test_health_metadata.py
