
[project]
authors = [
  {name = "Patrick Arminio", email = "patrick.arminio@gmail.com"},
]
dependencies = [
    "strawberry-graphql",
    "databases",
    "python-dotenv",
    "aiosqlite",
    "PyYAML",
    "PyGithub",
    "prisma>=0.7.0",
    "typer",
    "stellate-strawberry @ git+https://github.com/StellateHQ/stellate-strawberry.git",
    "fastapi[standard]",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "sql-tstring>=0.3.0",
    "pydantic>=2.12.0",
]
description = ""
license = {text = "MIT"}
name = "latest-cat"
requires-python = ">=3.12"
version = "0.1.0"

[tool.pdm.scripts]
dev = "uvicorn --reload main:app"
prod-server = "uvicorn main:app --host 0.0.0.0 --port 8080"
fetch = "python -m cli.fetch_versions"
cli = "python -m cli"
prisma = "prisma"

[tool.mypy]
plugins = [
  "strawberry.ext.mypy_plugin",
  "pydantic.mypy",
]
