
[project]
authors = [
  {name = "Patrick Arminio", email = "patrick.arminio@gmail.com"},
]
dependencies = [
    "strawberry-graphql",
    "starlette==0.17.1",
    "uvicorn<1.0.0,>=0.17.6",
    "pydantic<2.0.0,>=1.9.0",
    "databases<1.0.0,>=0.5.5",
    "python-dotenv<1.0.0,>=0.20.0",
    "aiosqlite<1.0.0,>=0.17.0",
    "PyYAML<7.0,>=6.0",
    "PyGithub<2.0,>=1.55",
    "prisma>=0.7.0",
    "typer>=0.6.1",
    "rich>=12.6.0",
    "httpx>=0.23.0",
    "python-dateutil>=2.8.2",
    "stellate-strawberry>=0.0.3",
]
description = ""
license = {text = "MIT"}
name = "backend"
requires-python = ">=3.9,<4.0"
version = "0.1.0"
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8<5.0.0,>=4.0.1",
    "mypy<1.0,>=0.942",
    "black<23.0.0,>=22.3.0",
    "pdbpp>=0.10.3",
]

[tool.pdm.scripts]
dev = "uvicorn --reload main:app"
prod-server = "uvicorn main:app --host 0.0.0.0 --port 8080"
fetch = "python -m cli.fetch_versions"
cli = "python -m cli"
prisma = "prisma"

[tool.pdm.build]
includes = []
[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517>=1.0.0"]

[tool.mypy]
plugins = [
  "strawberry.ext.mypy_plugin",
  "pydantic.mypy",
]
